<resources>

    <string name="app_name">三字经</string>
    <string name="exit">再按一次退出三字经</string>
    <string name="setting">设置</string>
    <string name="show_explain">显示注释下划线</string>
    <string name="general_setting">常用选项</string>
    <string name="play_mode">朗读模式</string>
    <string name="mode_single">单章朗读</string>
    <string name="mode_single_cycle">单章循环</string>
    <string name="mode_all">全书朗读</string>
    <string name="mode_all_cycle">全书循环</string>
    <string name="remove_ads">去除广告</string>
    <string name="show_ads">显示广告</string>
    <string name="show_ads_on">显示</string>
    <string name="show_ads_off">不显示</string>
    <string name="max_point1">满</string>
    <string name="max_point2">积分可不显示广告</string>
    <string name="current_point">，当前积分:</string>
    <string name="get_point">获取积分</string>
    <string name="player_service_msg">《三字经》开始朗读</string>
    <string name="player_service_title">《三字经》</string>
    <string name="player_service_detail">正在朗读</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="keep_screen">保持屏幕开启</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="content_title">三字经 - %1$s</string>
    <string name="table_text_content">wzxx</string>
    <string name="wheel_title">选择要跳转的页码：</string>
    <string name="font_file">DroidSansFallback.ttf</string>
        
    <string name="pref_key_last_img_index">pref_key_last_img_index</string>
    <string name="pref_key_mode_list">pref_key_mode_list</string>
    <string name="pref_key_keep_screen">pref_key_keep_screen</string>
    <string name="pref_key_show_ads">pref_key_show_ads</string>
    <string name="pref_key_get_point">pref_key_get_point</string>
    
    <string-array name="list_mode_array">
        <item>单章朗读</item>
        <item>单章循环</item>
        <item>全书朗读</item>
        <item>全书循环</item>
    </string-array>

    <string-array name="list_mode_values">
        <item>单章朗读</item>
        <item>单章循环</item>
        <item>全书朗读</item>
        <item>全书循环</item>
    </string-array>
    
    <string name="s_space"> </string>
    <string name="s_comma">，</string>
    <string name="s_dot">。</string>
    <string name="s11">rén</string>
    <string name="s12">zhī</string>
    <string name="s13">chū</string>
    <string name="s14">xìng</string>
    <string name="s15">běn</string>
    <string name="s16">shàn</string>
    <string name="s21">人</string>
    <string name="s22">之</string>
    <string name="s23">初</string>
    <string name="s24">性</string>
    <string name="s25">本</string>
    <string name="s26">善</string>
       
    <string name="s31">xìng</string>
    <string name="s32">xiāng</string>
    <string name="s33">jìn</string>
    <string name="s34">xí</string>
    <string name="s35">xiāng</string>
    <string name="s36">yuǎn</string>
    <string name="s41">性</string>
    <string name="s42">相</string>
    <string name="s43">近</string>
    <string name="s44">习</string>
    <string name="s45">相</string>
    <string name="s46">远</string>    
    
    <string name="s51">gǒu</string>
    <string name="s52">bú</string>
    <string name="s53">jiào</string>
    <string name="s54">xìng</string>
    <string name="s55">nǎi</string>
    <string name="s56">qiān</string>
    <string name="s61">苟</string>
    <string name="s62">不</string>
    <string name="s63">教</string>
    <string name="s64">性 </string>
    <string name="s65">乃</string>
    <string name="s66">迁</string>
    
    <string name="s71">jiào</string>
    <string name="s72">zhī</string>
    <string name="s73">dào</string>
    <string name="s74">guì</string>
    <string name="s75">yǐ</string>
    <string name="s76">zhuān</string>
    <string name="s81">教</string>
    <string name="s82">之</string>
    <string name="s83">道</string>
    <string name="s84">贵</string>
    <string name="s85">以</string>
    <string name="s86">专</string>
    
    <string name="number88">88</string>
    
    
    <string name="content_01" >
        <table border="1" cellspaceing="10">
<tr><td>rén</td><td>zhī</td><td>chū</td><td>xìng</td><td>běn</td><td>shàn</td>\n</tr>
<tr><td>人</td><td>之</td><td>初, </td><td>性</td><td>本</td><td>善.</td>\n\n</tr>
</table>

 </string>

</resources>